Support arbitrary environment variables from secrets Useful for keeping input/output plugin credentials out of the logstash pipeline configmap
Signed-off-by: Oded Ben-Ozer <oded.ben-ozer@riskified.com>

--- a/stable/logstash/templates/statefulset.yaml
+++ b/stable/logstash/templates/statefulset.yaml
@@ -76,6 +76,11 @@ spec:
             - name: {{ $key | upper | replace "." "_" }}
               value: {{ $value | quote }}
           {{- end }}
+          {{- if .Values.envSecret }}
+          envFrom:
+          - secretRef:
+              name: {{ .Values.envSecret }}
+          {{- end }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
           volumeMounts:
